# qa-engine-ai

./: .gitignore  IMPLEMENTATION_PLAN.md  PRD.md  PROJECT_REVIEW.md  README.md  TASKS.md  index.html  package-lock.json  package.json  pyproject.toml  server.py  tailwind.config.js  vite.config.js
src/: App.jsx  index.css
src/components/: ChatPane.jsx  DebugPane.jsx  Layout.jsx  MonitorPane.jsx  ResultsPane.jsx  SettingsPane.jsx  SuitesPane.jsx  TerminalPane.jsx  WorkspacePane.jsx
tests/: conftest.py  test_api.py  test_generated_application_cases.py
