[project]
name = "qa-engine-backend"
version = "0.1.0"
description = "FastAPI mock backend for QA Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx2>=2.0.0",
    "httpx>=0.27.0,<0.29.0",
]
test = [
    "pytest>=8.2.0",
    "httpx2>=2.0.0",
    "httpx>=0.27.0,<0.29.0",
]
